Fixed title spacing

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -182,6 +182,7 @@ pre code {
      margin-top: 10px;
      margin-left: 10px;
      padding-bottom: 20px;
+     margin-right: 1000px;
 }
 
 #header-container {
